IntershipFirstProject/force-app/main/default/objects/Catalog_Template__c/Catalog_Template__c.object-meta.xml
<CustomObject>
    <label>Catalog Template</label>
    <nameField>
        <label>Catalog Template  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalog Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>