IntershipFirstProject/force-app/main/default/objects/Catalog_Template__c/fields/Category_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Category_Text_Color__c</fullName>
    <defaultValue>&quot;#EEEEEE&quot;</defaultValue>
    <label>Category Text Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>