IntershipFirstProject/force-app/main/default/objects/Catalog_Template__c/fields/Header_Left_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Header_Left_Text_Color__c</fullName>
    <defaultValue>&quot;#EEEEEE&quot;</defaultValue>
    <label>Header Left Text Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>