IntershipFirstProject/force-app/main/default/objects/Catalog_Template__c/fields/Header_Right_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Header_Right_Text_Color__c</fullName>
    <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
    <label>Header Right Text Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>