IntershipFirstProject/force-app/main/default/objects/Catalog_Template__c/fields/Subtitle_Text__c.field-meta.xml
<CustomField>
    <fullName>Subtitle_Text__c</fullName>
    <defaultValue>&quot;WELCOME TO OUR CATALOG!&quot;</defaultValue>
    <label>Subtitle Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>