IntershipFirstProject/force-app/main/default/objects/Catalog_Template__c/fields/Subtitle_Text_Size__c.field-meta.xml
<CustomField>
    <fullName>Subtitle_Text_Size__c</fullName>
    <label>Subtitle Text Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>18px</fullName>
            </value>
            <value>
                <fullName>24px</fullName>
            </value>
            <value>
                <fullName>36px</fullName>
                <default>true</default>
                <label>36px</label>
            </value>
            <value>
                <fullName>48px</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>