IntershipFirstProject/force-app/main/default/objects/Catalog_Template__c/fields/Title_Text__c.field-meta.xml
<CustomField>
    <fullName>Title_Text__c</fullName>
    <defaultValue>&quot;FORCE.COM LABS&quot;</defaultValue>
    <label>Title Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>