IntershipFirstProject/force-app/main/default/objects/Catalog_Template__c/fields/Title_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Title_Text_Color__c</fullName>
    <defaultValue>&quot;#FFF6C8&quot;</defaultValue>
    <label>Title Text Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>