IntershipFirstProject/force-app/main/default/objects/Catalog_Template__c/fields/Title_Text_Size__c.field-meta.xml
<CustomField>
    <fullName>Title_Text_Size__c</fullName>
    <label>Title Text Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>40px</fullName>
            </value>
            <value>
                <fullName>48px</fullName>
            </value>
            <value>
                <fullName>56px</fullName>
            </value>
            <value>
                <fullName>64px</fullName>
                <default>true</default>
                <label>64px</label>
            </value>
            <value>
                <fullName>72px</fullName>
            </value>
            <value>
                <fullName>80px</fullName>
            </value>
            <value>
                <fullName>84px</fullName>
            </value>
            <value>
                <fullName>88px</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>